--- a/위클리챌런지/위클리_챌린지_4주차.ipynb
+++ b/위클리챌런지/위클리_챌린지_4주차.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "위클리 챌린지 4주차.ipynb",
+      "name": "위클리_챌린지_4주차.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -30,7 +30,29 @@
         "import numpy as np\n",
         "\n",
         "def solution(table, languages, preference):\n",
-        "    answer = \"\"\n",
+        "    _list = [i.split(\" \") for i in table]\n",
+        "    _list_t = list(map(list, zip(*_list)))\n",
+        "    score_list = [i.split(\" \") for i in _list_t[0]]\n",
+        "    \n",
+        "    _list_score = []\n",
+        "    for language in languages:\n",
+        "        _scores= []\n",
+        "        for i in range(len(_list)):\n",
+        "            score= 0\n",
+        "            for j in range(len(_list[i])):\n",
+        "                if _list[i][j] ==language :\n",
+        "                    score = len(_list)- j +1\n",
+        "            _scores.append(score)  \n",
+        "        _list_score.append(_scores)\n",
+        "    _list_score = list(map(list, zip(*_list_score)))\n",
+        "\n",
+        "    _sums  = []\n",
+        "    for i in range(len(_list_score)):\n",
+        "        _sum= 0\n",
+        "        for j in range(len(_list_score[i])):\n",
+        "            _sum += _list_score[i][j] * preference[j]\n",
+        "        _sums.append(_sum)\n",
+        "    answer = \"\".join(score_list[max(list(filter(lambda x: _sums[x] == max(_sums), range(len(_sums)))))])\n",
         "    \n",
         "    return answer\n",
         "\n",
@@ -40,7 +62,7 @@
         "preference = [7, 5, 5]\n",
         "solution(table, languages, preference)"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -54,6 +76,421 @@
           },
           "metadata": {},
           "execution_count": 142
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tOqRH1r312lI"
+      },
+      "source": [
+        "for i in v: \n",
+        "    for j in i: \n",
+        "        print(j) \n",
+        "\n",
+        "[j for i in v for j in i]\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 88
+        },
+        "id": "qaPhuXN-1yJT",
+        "outputId": "47e0180b-a2d6-450e-fac9-e448a415d11e"
+      },
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "def solution(table, languages, preference):\n",
+        "    _list = [i.split(\" \") for i in table]\n",
+        "    _list_t = list(map(list, zip(*_list)))\n",
+        "    score_list = [i.split(\" \") for i in _list_t[0]]\n",
+        "    \n",
+        "    _list_score = []\n",
+        "    for language in languages:\n",
+        "        _scores= []\n",
+        "        _list_1= [len(_list)- j +1 if _list[i][j] ==language else 0 for i in range(len(_list)) for j in range(len(_list[i]))]\n",
+        "        print(_list_1)\n",
+        "            \n",
+        "    answer = \"\"\n",
+        "    \n",
+        "    return answer\n",
+        "\n",
+        "\n",
+        "table = [\"SI JAVA JAVASCRIPT SQL PYTHON C#\", \"CONTENTS JAVASCRIPT JAVA PYTHON SQL C++\", \"HARDWARE C C++ PYTHON JAVA JAVASCRIPT\", \"PORTAL JAVA JAVASCRIPT PYTHON KOTLIN PHP\", \"GAME C++ C# JAVASCRIPT C JAVA\"]\n",
+        "languages = [\"PYTHON\", \"C++\", \"SQL\"]\n",
+        "preference = [7, 5, 5]\n",
+        "solution(table, languages, preference)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0, 0, 0, 0, 2, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+            "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 0, 0]\n",
+            "[0, 0, 0, 3, 0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "''"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 157
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "LCqaGwjs0Rlu",
+        "outputId": "2838f833-aa5d-4d02-c5bf-c60c60a8d609"
+      },
+      "source": [
+        "def solution(table, languages, preference):\n",
+        "    _list = [i.split(\" \") for i in table]\n",
+        "    _list_t = list(map(list, zip(*_list)))\n",
+        "    score_list = [i.split(\" \") for i in _list_t[0]]\n",
+        "    \n",
+        "    _list_score = []\n",
+        "    for language in languages:\n",
+        "        _scores= []\n",
+        "        for i in range(len(_list)):\n",
+        "            score= 0\n",
+        "            for j in range(len(_list[i])):\n",
+        "                if _list[i][j] ==language :\n",
+        "                    score = len(_list)- j +1\n",
+        "            _scores.append(score)  \n",
+        "        _list_score.append(_scores)\n",
+        "    _list_score = list(map(list, zip(*_list_score)))\n",
+        "\n",
+        "    _sums = []\n",
+        "    for i in range(len(_list_score)):\n",
+        "        _sum= 0\n",
+        "        for j in range(len(_list_score[i])):\n",
+        "            _sum += _list_score[i][j] * preference[j]\n",
+        "        _sums.append(_sum)   \n",
+        "    \n",
+        "    index_list = list(filter(lambda x: _sums[x] == max(_sums), range(len(_sums))))\n",
+        "    name_list = []\n",
+        "    for i in index_list:\n",
+        "        name_list.append(\"\".join(score_list[i]))\n",
+        "    answer =sorted(name_list)[0]\n",
+        "    \n",
+        "    return answer\n",
+        "\n",
+        "\n",
+        "table = [\"SI JAVA JAVASCRIPT SQL PYTHON C#\", \"CONTENTS JAVASCRIPT JAVA PYTHON SQL C++\", \"HARDWARE C C++ PYTHON JAVA JAVASCRIPT\", \"PORTAL JAVA JAVASCRIPT PYTHON KOTLIN PHP\", \"GAME C++ C# JAVASCRIPT C JAVA\"]\n",
+        "languages = [\"JAVA\", \"JAVASCRIPT\"]\n",
+        "preference =[7, 5]\n",
+        "solution(table, languages, preference)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'PORTAL'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 165
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tPpm8u7h7NaR"
+      },
+      "source": [
+        "# 첫번 째 버전"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mAUvL86T7PH0"
+      },
+      "source": [
+        "def solution(table, languages, preference):\n",
+        "    _list = [i.split(\" \") for i in table]\n",
+        "    _list_t = list(map(list, zip(*_list)))\n",
+        "    score_list = [i.split(\" \") for i in _list_t[0]]\n",
+        "    \n",
+        "    _list_score = []\n",
+        "    for language in languages:\n",
+        "        _scores= []\n",
+        "        for i in range(len(_list)):\n",
+        "            score= 0\n",
+        "            for j in range(len(_list[i])):\n",
+        "                if _list[i][j] ==language :\n",
+        "                    score = len(_list)- j +1\n",
+        "            _scores.append(score)  \n",
+        "        _list_score.append(_scores)\n",
+        "    _list_score = list(map(list, zip(*_list_score)))\n",
+        "\n",
+        "    _sums = []\n",
+        "    for i in range(len(_list_score)):\n",
+        "        _sum= 0\n",
+        "        for j in range(len(_list_score[i])):\n",
+        "            _sum += _list_score[i][j] * preference[j]\n",
+        "        _sums.append(_sum)   \n",
+        "    \n",
+        "    index_list = list(filter(lambda x: _sums[x] == max(_sums), range(len(_sums))))\n",
+        "    name_list = []\n",
+        "    for i in index_list:\n",
+        "        name_list.append(\"\".join(score_list[i]))\n",
+        "    answer =sorted(name_list)[0]\n",
+        "    \n",
+        "    return answer"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O--bjw8J7PvN"
+      },
+      "source": [
+        "# 두번 째 버전"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        },
+        "id": "CVWuMsL85pOx",
+        "outputId": "b9885dbe-22d9-4597-8338-addf9443e9e6"
+      },
+      "source": [
+        "def solution(table, languages, preference):\n",
+        "    _list = [i.split(\" \") for i in table]\n",
+        "    _list_t = list(map(list, zip(*_list)))\n",
+        "    print(_list_t)\n",
+        "    score_list = [i.split(\" \") for i in _list_t[0]]\n",
+        "    print(score_list)\n",
+        "    \n",
+        "    _list_score = []\n",
+        "    for lan in range(len(languages)):\n",
+        "        _scores= []\n",
+        "        for i in range(len(_list)):\n",
+        "            score= 0\n",
+        "            for j in range(len(_list[i])):\n",
+        "                if _list[i][j] ==languages[lan]:\n",
+        "                    score = len(_list)- j +1\n",
+        "            _scores.append(score* preference[lan])  \n",
+        "        _list_score.append(_scores)\n",
+        "    print(_list_score)\n",
+        "    \n",
+        "    _list_score = list(map(list, zip(*_list_score)))\n",
+        "    _sums = [sum(i) for i in _list_score]\n",
+        "    index_list = list(filter(lambda x: _sums[x] == max(_sums), range(len(_sums))))\n",
+        "    name_list = []\n",
+        "    for i in index_list:\n",
+        "        name_list.append(\"\".join(score_list[i]))\n",
+        "    answer =sorted(name_list)[0]\n",
+        "    \n",
+        "    return answer\n",
+        "\n",
+        "table = [\"SI JAVA JAVASCRIPT SQL PYTHON C#\", \"CONTENTS JAVASCRIPT JAVA PYTHON SQL C++\", \"HARDWARE C C++ PYTHON JAVA JAVASCRIPT\", \"PORTAL JAVA JAVASCRIPT PYTHON KOTLIN PHP\", \"GAME C++ C# JAVASCRIPT C JAVA\"]\n",
+        "print(table)\n",
+        "languages = [\"PYTHON\", \"C++\", \"SQL\"] # 언어\n",
+        "preference = [7, 5, 5]\n",
+        "solution(table, languages, preference)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['SI JAVA JAVASCRIPT SQL PYTHON C#', 'CONTENTS JAVASCRIPT JAVA PYTHON SQL C++', 'HARDWARE C C++ PYTHON JAVA JAVASCRIPT', 'PORTAL JAVA JAVASCRIPT PYTHON KOTLIN PHP', 'GAME C++ C# JAVASCRIPT C JAVA']\n",
+            "[['SI', 'CONTENTS', 'HARDWARE', 'PORTAL', 'GAME'], ['JAVA', 'JAVASCRIPT', 'C', 'JAVA', 'C++'], ['JAVASCRIPT', 'JAVA', 'C++', 'JAVASCRIPT', 'C#'], ['SQL', 'PYTHON', 'PYTHON', 'PYTHON', 'JAVASCRIPT'], ['PYTHON', 'SQL', 'JAVA', 'KOTLIN', 'C'], ['C#', 'C++', 'JAVASCRIPT', 'PHP', 'JAVA']]\n",
+            "[['SI'], ['CONTENTS'], ['HARDWARE'], ['PORTAL'], ['GAME']]\n",
+            "[[14, 21, 21, 21, 0], [0, 5, 20, 0, 25], [15, 10, 0, 0, 0]]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'HARDWARE'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 88
+        },
+        "id": "IpnOs2mY9gJZ",
+        "outputId": "fe30372c-f3ac-4cd7-b0fd-4c79a58ccd08"
+      },
+      "source": [
+        "def solution(table, languages, preference):\n",
+        "    _list = [i.split(\" \") for i in table]\n",
+        "    _list_t = list(map(list, zip(*_list)))\n",
+        "    score_list = [i.split(\" \") for i in _list_t[0]]\n",
+        "    \n",
+        "    _list_score = []\n",
+        "    for lan,language in enumerate(languages):\n",
+        "        _scores= []\n",
+        "        for i in range(len(_list)):\n",
+        "            score= 0\n",
+        "            for j in range(len(_list[i])):\n",
+        "                if _list[i][j] ==language:\n",
+        "                    score = len(_list)- j +1\n",
+        "            _scores.append(score* preference[lan])  \n",
+        "        _list_score.append(_scores)\n",
+        "    \n",
+        "    _list_score = list(map(list, zip(*_list_score)))\n",
+        "    _sums = [sum(i) for i in _list_score]\n",
+        "    index_list = list(filter(lambda x: _sums[x] == max(_sums), range(len(_sums))))\n",
+        "    name_list = []\n",
+        "    for i in index_list:\n",
+        "        name_list.append(\"\".join(score_list[i]))\n",
+        "    answer =sorted(name_list)[0]\n",
+        "    \n",
+        "    return answer\n",
+        "\n",
+        "table = [\"SI JAVA JAVASCRIPT SQL PYTHON C#\", \"CONTENTS JAVASCRIPT JAVA PYTHON SQL C++\", \"HARDWARE C C++ PYTHON JAVA JAVASCRIPT\", \"PORTAL JAVA JAVASCRIPT PYTHON KOTLIN PHP\", \"GAME C++ C# JAVASCRIPT C JAVA\"]\n",
+        "languages = [\"PYTHON\", \"C++\", \"SQL\"]\n",
+        "preference = [7, 5, 5]\n",
+        "solution(table, languages, preference)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[14, 21, 21, 21, 0]]\n",
+            "[[14, 21, 21, 21, 0], [0, 5, 20, 0, 25]]\n",
+            "[[14, 21, 21, 21, 0], [0, 5, 20, 0, 25], [15, 10, 0, 0, 0]]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'HARDWARE'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "J1zyCKP6PtZl"
+      },
+      "source": [
+        "# 최종 수정 "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "M8AfRrASCpNU",
+        "outputId": "690a59d9-4706-4fad-c299-0bff995dc8ae"
+      },
+      "source": [
+        "def solution(table, languages, preference):\n",
+        "    _list = [i.split(\" \") for i in table]\n",
+        "    _list_t = list(map(list, zip(*_list)))\n",
+        "    score_list = [i.split(\" \") for i in _list_t[0]]\n",
+        "    \n",
+        "    _list_score = []\n",
+        "    for lan,language in enumerate(languages):\n",
+        "        _scores= []\n",
+        "        for i in range(len(_list)):\n",
+        "            score= 0\n",
+        "            for j in range(len(_list[i])):\n",
+        "                if _list[i][j] ==language:\n",
+        "                    score = len(_list)- j +1\n",
+        "            _scores.append(score* preference[lan])  \n",
+        "        _list_score.append(_scores)\n",
+        "    \n",
+        "    _list_score = list(map(list, zip(*_list_score)))\n",
+        "    _sums = [sum(i) for i in _list_score]\n",
+        "\n",
+        "    name_list = [[\"\".join(score_list[i]),_sums[i]] for i,score in enumerate(score_list)]\n",
+        "\n",
+        "    answer =sorted(name_list,key = lambda x:(-x[1],x[0]))[0][0]\n",
+        "    \n",
+        "    return answer\n",
+        "\n",
+        "table = [\"SI JAVA JAVASCRIPT SQL PYTHON C#\", \"CONTENTS JAVASCRIPT JAVA PYTHON SQL C++\", \"HARDWARE C C++ PYTHON JAVA JAVASCRIPT\", \"PORTAL JAVA JAVASCRIPT PYTHON KOTLIN PHP\", \"GAME C++ C# JAVASCRIPT C JAVA\"]\n",
+        "languages = [\"PYTHON\", \"C++\", \"SQL\"]\n",
+        "preference = [7, 5, 5]\n",
+        "solution(table, languages, preference)\n",
+        "\n",
+        "\n",
+        "table = [\"SI JAVA JAVASCRIPT SQL PYTHON C#\", \"CONTENTS JAVASCRIPT JAVA PYTHON SQL C++\", \"HARDWARE C C++ PYTHON JAVA JAVASCRIPT\", \"PORTAL JAVA JAVASCRIPT PYTHON KOTLIN PHP\", \"GAME C++ C# JAVASCRIPT C JAVA\"]\n",
+        "languages = [\"JAVA\", \"JAVASCRIPT\"]\n",
+        "preference =[7, 5]\n",
+        "solution(table, languages, preference)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'PORTAL'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
         }
       ]
     }
