--- a/Level-1/같은_숫자는_싫어.ipynb
+++ b/Level-1/같은_숫자는_싫어.ipynb
@@ -20,43 +20,37 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 55
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "NlEupd7DMcxL",
-        "outputId": "773229ba-e6ef-42f5-8a1c-b3153dc0f1b3"
+        "id": "9xjbT9UtRHkm",
+        "outputId": "27532091-27fe-44fe-fe95-d13a5f2d98bc"
       },
       "source": [
-        "def solution(s):\n",
-        "    len_, cent_ = len(s)%2, len(s)//2 \n",
-        "    answer =s[cent_-1:cent_+1] if len(s)%2 == 0 else s[cent_]\n",
-        "    print(len_, cent_)\n",
+        "def solution(arr):\n",
+        "    answer = []\n",
+        "    answer.append(arr[0])\n",
+        "    for i in range(1,len(arr)):\n",
+        "        # 그 전에것 과 같을 때 \n",
+        "        if arr[i] != arr[i-1]:\n",
+        "            answer.append(arr[i])\n",
+        "                \n",
         "    return answer\n",
         "\n",
-        "s = \"abcde\"\n",
-        "solution(s)"
+        "#arr = [1,1,3,3,0,1,1]\n",
+        "arr = [4,4,4,3,3]\n",
+        "solution(arr)"
       ],
-      "execution_count": 8,
+      "execution_count": 88,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 2\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
-              "'c'"
+              "[4, 3]"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 88
         }
       ]
     },
@@ -64,43 +58,34 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 55
+          "base_uri": "https://localhost:8080/"
         },
-        "id": "2e8Zq4ssMjre",
-        "outputId": "99b6d9d3-9362-4c40-b6a4-e4f7f8fa6554"
+        "id": "lrJsAeg6itPC",
+        "outputId": "d5c6bb1a-f6c9-4dc9-8591-d5c7464521b1"
       },
       "source": [
-        "def solution(s):\n",
-        "    len_, cent_ = len(s)%2, len(s)//2 \n",
-        "    answer =s[cent_-1:cent_+1] if len(s)%2 == 0 else s[cent_]\n",
-        "    print(len_, cent_)\n",
+        "def solution(arr):\n",
+        "    answer = []\n",
+        "    answer.append(arr[0])\n",
+        "    answer += [arr[i] for i in range(1,len(arr)) if arr[i] != arr[i-1]]\n",
+        "                \n",
         "    return answer\n",
         "\n",
-        "s = \"qwer\"\n",
-        "solution(s)"
+        "#arr = [1,1,3,3,0,1,1]\n",
+        "arr = [4,4,4,3,3]\n",
+        "solution(arr)"
       ],
-      "execution_count": 10,
+      "execution_count": 98,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0 2\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
-              "'we'"
+              "[4, 3]"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 98
         }
       ]
     }
