--- a/알고리즘의 개요와 실습 환경 구축_inflearn 강의/다익스트라_알고리즘.ipynb
+++ b/알고리즘의 개요와 실습 환경 구축_inflearn 강의/다익스트라_알고리즘.ipynb
@@ -23,7 +23,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EYUTV70LTXwk",
-        "outputId": "b3712bb5-988f-4d07-fb47-9579b7871702"
+        "outputId": "eda68822-1fed-4fd2-b7e3-63d24f6008f9"
       },
       "source": [
         "number = 6\n",
@@ -58,11 +58,13 @@
         "    v[start]= True\n",
         "    for i in range(number-2):\n",
         "        current = getSamllIndex()\n",
+        "        #print(i, current, d[current])\n",
         "        v[current] = True\n",
         "        for j in range(number):\n",
         "            if not v[j]:\n",
         "                # 합치는 것이 더 작은 값으로 갱신\n",
         "                # 1-> 4 비용이 1이고 \n",
+        "                print(i, current, j)\n",
         "                if (d[current] + a[current][j] < d[j]):\n",
         "                    d[j]= d[current] + a[current][j] \n",
         "\n",
@@ -70,12 +72,22 @@
         "for i in range(number):\n",
         "    print(d[i], end =\",\")"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "0 3 1\n",
+            "0 3 2\n",
+            "0 3 4\n",
+            "0 3 5\n",
+            "1 1 2\n",
+            "1 1 4\n",
+            "1 1 5\n",
+            "2 4 2\n",
+            "2 4 5\n",
+            "3 2 5\n",
             "0,2,3,1,2,4,"
           ]
         }
@@ -158,7 +170,7 @@
         "\n",
         "print(dijkstra(graph, 1))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +189,7 @@
       "source": [
         ""
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     }
   ]
