--- a/Level-1/모의고사.ipynb
+++ b/Level-1/모의고사.ipynb
@@ -41,7 +41,7 @@
         "answers= [1,3,2,4,2]\n",
         "solution(answers)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -65,6 +65,69 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FixyCOtntCfS",
+        "outputId": "8a8ec7ce-6484-42b4-ad88-114f139f47b2"
+      },
+      "source": [
+        "def solution(answers):\n",
+        "    answer = []\n",
+        "    students = [[1, 2, 3, 4, 5],[2, 1, 2, 3, 2, 4, 2, 5],[3, 3, 1, 1, 2, 2, 4, 4, 5, 5]]\n",
+        "    scores = [0 for i in range(0,3)] \n",
+        "\n",
+        "    for i in range(len(answers)):\n",
+        "        for j,val in enumerate(students):\n",
+        "            print(answers[i], val[i%len(val)], answers[i] == val[i%len(val)])\n",
+        "            if answers[i] == val[i%len(val)]:\n",
+        "                scores[j] += 1\n",
+        "    print(scores)\n",
+        "    answer = [i+1 for i in  range(3) if scores[i] == max(scores)]\n",
+        "    return answer\n",
+        "\n",
+        "answers= [1,3,2,4,2]\n",
+        "solution(answers)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 1 True\n",
+            "1 2 False\n",
+            "1 3 False\n",
+            "3 2 False\n",
+            "3 1 False\n",
+            "3 3 True\n",
+            "2 3 False\n",
+            "2 2 True\n",
+            "2 1 False\n",
+            "4 4 True\n",
+            "4 3 False\n",
+            "4 1 False\n",
+            "2 5 False\n",
+            "2 2 True\n",
+            "2 2 True\n",
+            "[2, 2, 2]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     }
   ]
 }
