--- a/백준/1948_임계경로.ipynb
+++ b/백준/1948_임계경로.ipynb
@@ -96,7 +96,7 @@
         "finish = 7\n",
         "topologySort()"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,7 +147,7 @@
         "edge = Edge(2, 4)\n",
         "print(edge)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
         "start,finish = list(map(int, input().split()) )\n",
         "topologySort()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FuqUEVg1QO1H",
-        "outputId": "af340b87-0d0b-4517-9a8a-dfdaabf33753"
+        "outputId": "7372a079-eb15-41b1-9095-92aedb4c8ea9"
       },
       "source": [
         "import sys\n",
@@ -303,12 +303,16 @@
         "    indegree[b]+=1\n",
         "'''\n",
         "graph = [[], [(2, 4), (3, 2), (4, 3)], [(6, 3), (7, 5)], [(5, 1)], [(6, 4)], [(6, 2)], [(7, 5)], []]\n",
-        "back_graph= [[], [], [(1, 4)], [(1, 2)], [(1, 3)], [(3, 1)], [(2, 3), (4, 4), (5, 2)], [(2, 5), (6, 5)]]\n",
-        "print(graph)\n",
-        "print(back_graph)\n",
+        "back_graph=  [[], [], [(1, 4)], [(1, 2)], [(1, 3)], [(3, 1)], [(2, 3), (4, 4), (5, 2)], [(2, 5), (6, 5)]]\n",
+        "indegree = [0, 0, 1, 1, 1, 1, 3, 2]\n",
+        "print(indegree)\n",
+        "\n",
         "#start,end=map(int,input().split())\n",
         "start = 1\n",
         "end = 7\n",
+        "\n",
+        "print(\"graph\", graph)\n",
+        "print(\"back_graph\", back_graph)\n",
         "\n",
         "q.append(start)\n",
         "\n",
@@ -347,28 +351,53 @@
         "topologysort()\n",
         "#출처 DODOSAYhttps://hiruby.tistory.com/439"
       ],
-      "execution_count": 84,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[[], [], [], [], [], [], [], []]\n",
-            "[[], [(2, 4), (3, 2), (4, 3)], [(6, 3), (7, 5)], [(5, 1)], [(6, 4)], [(6, 2)], [(7, 5)], []]\n",
-            "[[], [], [(1, 4)], [(1, 2)], [(1, 3)], [(3, 1)], [(2, 3), (4, 4), (5, 2)], [(2, 5), (6, 5)]]\n",
+            "[0, 0, 1, 1, 1, 1, 3, 2]\n",
+            "graph [[], [(2, 4), (3, 2), (4, 3)], [(6, 3), (7, 5)], [(5, 1)], [(6, 4)], [(6, 2)], [(7, 5)], []]\n",
+            "back_graph [[], [], [(1, 4)], [(1, 2)], [(1, 3)], [(3, 1)], [(2, 3), (4, 4), (5, 2)], [(2, 5), (6, 5)]]\n",
             "cur:: 1\n",
             "0 0 4\n",
             "0 0 2\n",
             "0 0 3\n",
+            "cur:: 2\n",
+            "0 4 3\n",
+            "0 4 5\n",
+            "cur:: 3\n",
+            "0 2 1\n",
+            "cur:: 4\n",
+            "7 3 4\n",
+            "cur:: 5\n",
+            "7 3 2\n",
+            "cur:: 6\n",
+            "9 7 5\n",
+            "cur:: 7\n",
             "deque([])\n",
-            "[0, 0, 4, 2, 3, 0, 0, 0]\n",
+            "[0, 0, 4, 2, 3, 3, 7, 12]\n",
             "deque([7])\n",
             "7\n",
             "[[], [], [(1, 4)], [(1, 2)], [(1, 3)], [(3, 1)], [(2, 3), (4, 4), (5, 2)], [(2, 5), (6, 5)]]\n",
+            "deque([6])\n",
+            "6\n",
+            "[[], [], [(1, 4)], [(1, 2)], [(1, 3)], [(3, 1)], [(2, 3), (4, 4), (5, 2)], [(2, 5), (6, 5)]]\n",
+            "deque([2, 4])\n",
+            "2\n",
+            "[[], [], [(1, 4)], [(1, 2)], [(1, 3)], [(3, 1)], [(2, 3), (4, 4), (5, 2)], [(2, 5), (6, 5)]]\n",
+            "deque([4, 1])\n",
+            "4\n",
+            "[[], [], [(1, 4)], [(1, 2)], [(1, 3)], [(3, 1)], [(2, 3), (4, 4), (5, 2)], [(2, 5), (6, 5)]]\n",
+            "deque([1])\n",
+            "1\n",
+            "[[], [], [(1, 4)], [(1, 2)], [(1, 3)], [(3, 1)], [(2, 3), (4, 4), (5, 2)], [(2, 5), (6, 5)]]\n",
             "deque([])\n",
-            "[0, 0, 4, 2, 3, 0, 0, 0]\n",
-            "0\n",
-            "0\n"
+            "[0, 0, 4, 2, 3, 3, 7, 12]\n",
+            "12\n",
+            "5\n"
           ]
         }
       ]
