--- a/백준/2188_축사_배정.ipynb
+++ b/백준/2188_축사_배정.ipynb
@@ -17,6 +17,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4G-m-eIvz7Ok"
+      },
+      "source": [
+        "https://www.youtube.com/watch?v=-iLzubVMXAU&list=PLRx0vPvlEmdDHxCvAQS1_6XV4deOwfVrz&index=36"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -62,6 +71,15 @@
             "4\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xPDtojepz6yK"
+      },
+      "source": [
+        ""
       ]
     },
     {
