--- a/알고리즘의 개요와 실습 환경 구축_inflearn 강의/라빈_카프_알고리즘.ipynb
+++ b/알고리즘의 개요와 실습 환경 구축_inflearn 강의/라빈_카프_알고리즘.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "라빈 카프 알고리즘.ipynb",
+      "name": "라빈_카프_알고리즘.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -23,7 +23,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BN-SqLt1dg6Y",
-        "outputId": "affe3015-b891-4982-b362-1930d8ec1512"
+        "outputId": "690bf4d8-ae21-4d94-add9-f2c4daa5ab9a"
       },
       "source": [
         "def findString(parent, pattern):\n",
@@ -32,7 +32,7 @@
         "    parentHash = 0\n",
         "    patternHash = 0\n",
         "    power = 1\n",
-        "    for i in range(parenstSize-patternSize):\n",
+        "    for i in range(parenstSize-patternSize+1):\n",
         "        if (i == 0):\n",
         "            for j in range(patternSize):\n",
         "                # 오른쪽 부터 값을 구해준다. \n",
@@ -58,7 +58,7 @@
         "pattern = \"abacaaba\"\n",
         "findString(parent, pattern)"
       ],
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +72,8 @@
             "6136 6145\n",
             "12408 12417\n",
             "24824 24833\n",
-            "7 번째에서 발견했습니다. \n"
+            "7 번째에서 발견했습니다. \n",
+            "12 번째에서 발견했습니다. \n"
           ]
         }
       ]
