--- a/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_13강_그리디_알고리즘_유형_문제_풀이.ipynb
+++ b/이것이 코딩 테스트다 with Python/[이것이_코딩_테스트다_with_Python]_13강_그리디_알고리즘_유형_문제_풀이.ipynb
@@ -19,6 +19,7 @@
         "while True:\n",
         "    #N이 k로 나누어 떨저니는 수가 될때 까지 빼기\n",
         "    target = (n // k) *k # 가장 가까운 값을 찾는다 .\n",
+        "    print(target)\n",
         "    result += (n-target)\n",
         "    n = target\n",
         "    #n이 K보다 작을 때 (더 이상 나눌 수 없을 때 ) 반복문 탈출\n",
@@ -27,66 +28,27 @@
         "    #k로 나누기\n",
         "    result += 1\n",
         "    n //= k\n",
-        "print(\"result::\", result, \"n :\", n)\n",
-        "result += (n-1)\n",
-        "print(\"result\", result)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gCevkEc1bYoK",
-        "outputId": "8d7e7f6d-194c-42ac-fc5f-f45d585e4977"
-      },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "result:: 7 n : 0\n",
-            "result 6\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "n, k = map(int, input().split())\n",
-        "result = 0\n",
         "\n",
-        "while True:\n",
-        "    #N이 k로 나누어 떨저니는 수가 될때 까지 빼기\n",
-        "    target = (n // k) *k # 가장 가까운 값을 찾는다 .\n",
-        "    result += (n-target)\n",
-        "    n = target\n",
-        "    #n이 K보다 작을 때 (더 이상 나눌 수 없을 때 ) 반복문 탈출\n",
-        "    if n < k:\n",
-        "        break\n",
-        "    #k로 나누기\n",
-        "    result += 1\n",
-        "    n //= k\n",
-        "print(\"result::\", result, \"n :\", n)\n",
         "result += (n-1)\n",
-        "print(\"result\", result)"
+        "print(result)"
       ],
       "metadata": {
+        "id": "H26zJOCnguzE",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "EHK2bAK9d1Lc",
-        "outputId": "b87357a9-35f4-42c0-9a04-f2dd4658569a"
+        "outputId": "b150d402-9211-4f02-8c9f-8c3db76ff3e5"
       },
-      "execution_count": 26,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "25 3\n",
-            "result:: 7 n : 0\n",
-            "result 6\n"
+            "24\n",
+            "6\n",
+            "0\n",
+            "6\n"
           ]
         }
       ]
@@ -110,10 +72,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Y70R_nvVd74q",
-        "outputId": "502a5eb5-515e-401e-b93e-ec939321906e"
+        "id": "9z5WVsOSASR9",
+        "outputId": "70846d3f-2169-49bd-f808-dac663e218b8"
       },
-      "execution_count": 27,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,13 +106,13 @@
         "print(result)"
       ],
       "metadata": {
+        "id": "N2COuj5hAcnZ",
+        "outputId": "fa986c25-b10f-4a27-a539-e659cf77e2da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "XvBaBOyfgKHd",
-        "outputId": "f5964df5-50f7-486b-eee2-ff46f78166c5"
+        }
       },
-      "execution_count": 28,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,29 +122,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "n = int(input())\n",
-        "data = list(map(int, input().split()))\n",
-        "data.sort()\n",
-        "\n",
-        "result = 0 # 총 그룹의 수\n",
-        "count = 0 # 현재 그룹에 포함된 모험가의 수\n",
-        "\n",
-        "for i in data: # 공포도를 낮은 것 부터 하나씩 확인하여\n",
-        "    count += 1 # 현재 그룹에 해당 모험가를 포함시키기\n",
-        "    if count >= i: # 현재 그룹에 포함된 모험가의 수가 현재의 공포도 이상이라면, 그룹 결정\n",
-        "        result += 1\n",
-        "        count = 0\n",
-        "print(result)\n"
-      ],
-      "metadata": {
-        "id": "p4PwNCKhfqfD"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
